--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,11 @@
-@import "./components/components";
-@import "./pages/pages";
-@import "./styles/style";
+@import './components/components';
+@import './pages/pages';
+@import './styles/style';
+
+* {
+	font-family: $font-family;
+}
 
 body {
-  background: red;
+	background: $main-bg;
 }
