home page alost dones

--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -5,6 +5,7 @@ body {
 		height: 3rem;
 		background-color: $secondary;
 		border: 1px solid $txt;
+		box-shadow: 3px 3px $txt;
 		// font-size: 3rem;
 		// color: #ff6768;
 
